# IncompleteBeta

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_all  incbeta.cpp
include/JustMath/: Beta.hpp
scripts/: build_tests
tests/: CMakeLists.txt
tests/src/: CompareTable.cpp  LimitingCases.cpp  generate_incbeta_table.py  incbeta_table.csv
